new updates on api's
